Bug 1749308 - Don't attempt to send a message to the graph after a ScriptProcessorNode has been marked for collection. r=karlt

Differential Revision: https://phabricator.services.mozilla.com/D135612